assignment 4 minor changes to examples

--- a/story-template-1/css/tabs.css
+++ b/story-template-1/css/tabs.css
@@ -1,6 +1,6 @@
 /*
-USC IML 400 Fall 2012.
-tabs.css by Luis Blackaller. 09 23 2012.
+USC IML 400 Spring 2013.
+tabs.css by Luis Blackaller. 02 01 2013.
 */
 body{
     margin:0;
