youtube-bg minor edits

--- a/youtube-bg/css/main.css
+++ b/youtube-bg/css/main.css
@@ -24,6 +24,22 @@ html, body{
   }
 }
 
+#picture-bg{
+	display:none;
+}
+
+.ios #video-bg{
+ 	display:none;
+}
+
+.ios #picture-bg{
+ 	display:visible;
+ 	background:yellow;
+ 	background-size:cover;
+}
+
+
+
 ::-webkit-scrollbar { 
 	display: none;
 }
