--- a/sticky-menu/sticky-menu.css
+++ b/sticky-menu/sticky-menu.css
@@ -77,7 +77,7 @@ table {font-size:inherit;font:100%;}select, input, textarea {font:99% arial,helv
 .submenu{
 	background:#000;
 	width:100%;
-	height:90px;
+	min-height:90px;
 
 	font-size:21px;
 }
