--- a/sticky-menu/sticky-menu.css
+++ b/sticky-menu/sticky-menu.css
@@ -5,7 +5,9 @@ body{font-size:12px;*font-size:small;*font:x-small;}
 table {font-size:inherit;font:100%;}select, input, textarea {font:99% arial,helvetica,clean,sans-serif;}pre, code {font:115% monospace;*font-size:100%;}
 /*======== reset/cleanup of browser css =============*/
 
-
+::-webkit-scrollbar{
+	display:none;	
+}
 
 
 #bg{
