--- a/apis/instagram/style.css
+++ b/apis/instagram/style.css
@@ -1,12 +1,10 @@
-
 body {
-  background: #FFFFFF;
+  background: #222222;
 }
 .hashtag li {
   display: inline-block;
-  width: 306px;
-  height: 306px;
-  margin: 0px 20px 20px 0px;
+  line-height:0;
+  margin: 10px 10px;
 }
 .hashtag {
   width: 1004px;
@@ -18,19 +16,8 @@ h1 {
   text-align: center;
   font-family: 'Courier';
   font-size: 36px;
-  padding: 20px;
 
-  color: #4F4F4F;
+  font-weight: normal;
+  color: deeppink;
 
-}
-
-img {
-
-}
-span {
-  font-family: 'Courier';
-  font-size: 24px;
-  text-align: center;
-  display: block;
-  padding: 10px 0px;
 }
