--- a/apis/instagram/style.css
+++ b/apis/instagram/style.css
@@ -7,16 +7,21 @@ body {
   margin: 10px 10px;
 }
 .hashtag {
-  width: 1004px;
   margin: auto;
 }
+a {
+  color:dodgerblue;
+}
 
+a:hover {
+  color:#eeeeee;
+}
 
 h1 {
-  text-align: center;
-  font-family: 'Courier';
-  font-size: 36px;
 
+  font-family: 'Courier';
+  font-size: 24px;
+  margin:30px 0 10px 10px;
   font-weight: normal;
   color: deeppink;
 
