--- a/apis/instagram/style.css
+++ b/apis/instagram/style.css
@@ -5,14 +5,19 @@ body {
 }
 
 #container{
-  margin:0;
+  margin:30px 0 0 0;
   padding:0;
 }
 #container li {
   float:left;
   list-style: none;
-  margin:10px;
+  margin:20px;
+  position:relative;
 
+}
+#container li span {
+  position:absolute;
+  top:-20px;
 }
 .user {
   position:absolute;
@@ -33,7 +38,7 @@ h1 {
   //text-align:center;
   font-family: 'Courier';
   font-size: 24px;
-  margin:30px 0 10px 10px;
+  margin:30px 0 10px 20px;
   font-weight: normal;
   color: deeppink;
 
